--- a/style/index.css
+++ b/style/index.css
@@ -51,7 +51,7 @@ table {
 *{
     box-sizing:border-box;
     max-width: 100%;
-    border:5px solid gray;
+    
 }
 html{
     font-size: 62.5%;
@@ -62,6 +62,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 h1{
+    padding-left:10rem;
     font-family: sans-serif;
     color: honeydew;
 }
@@ -138,6 +139,7 @@ h3{
     font-weight: bold;
 }
 footer{
+    background-color:#778899;
     width: 100%;
     display:flex;
     align-items:center;
