--- a/style/index.css
+++ b/style/index.css
@@ -17,12 +17,12 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	/* margin: 0;
+	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline; */
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -51,10 +51,10 @@ table {
 *{
     box-sizing:border-box;
     max-width: 100%;
-    
 }
 html{
     font-size: 62.5%;
+    /* max-width: 800px; */
 }
 body{
     font-size:1.6rem;
@@ -62,7 +62,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 h1{
-    padding-left:10rem;
+    width: 36%;
+    padding-left:3.1rem;
     font-family: sans-serif;
     color: honeydew;
 }
@@ -74,26 +75,29 @@ header{
     background-color:#778899;
 }
 nav {
-   
+    display: flex;
+    justify-content:left;
+    justify-content:space-evenly;
     font-size: 2.5rem;
     font-family: monospace;
-    width:30%;
-    display:flex;
-    padding:2rem;
-    justify-content:space-evenly;
+    width:36%;
+    padding:1rem;
+    
+}
+.img-cont {
+    width:50%;
 }
 a{
     color: honeydew;
 }
 .main {
-    background-color: ;
     width:100%;
     display:flex;
 
 }
 .info{
     justify-content: space-around;
-padding-right:5%;
+    padding-right:5%;
     padding-left:5%;
     display:flex;
     flex-direction: column;
@@ -110,7 +114,7 @@ h2{
     font-size:2.1rem;
     font-weight: bold;
     padding:3%;
-    width:30%;
+    width:50%;
     align-self: center left;
 }
 p{
@@ -144,4 +148,95 @@ footer{
     display:flex;
     align-items:center;
    flex-direction: column;
+}
+
+.picpair {
+    display: flex;
+}
+
+.picpair div {
+    margin: 1%;
+}
+
+/*mobile*/
+@media(max-width:500px) {
+    
+    nav, h1, .a{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width:100%;
+    }
+    h1{
+        text-align: center;
+        padding-left: 0rem;
+    }
+    h2{
+        text-align: center;
+    }
+    .main, .info, h2, p{
+        display: flex;
+        flex-wrap:nowrap;
+        min-width: 400px;
+    }
+    .img-cont{
+        width:400px;
+
+    }
+    .b1{
+        text-align: center;
+        display: flex;
+        max-width: 38%;
+        align-items: center;
+    }
+
+    p{
+        max-width: 500px;
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+    .gallery1{
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+    
+   }
+@media(max-width:800px) {
+    nav, h1, .a{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width:100%;
+    }
+    h2{
+        text-align: center;
+    }
+    .main, .info, h2, p {
+        display: flex;
+        flex-direction:row;
+        justify-content: center;
+        flex-wrap:wrap;
+        min-width:100%;
+    }
+   
+    p{
+        padding-top: 2rem;
+        max-width: 500px;
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+    .gallery1{
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
+    h1{
+        text-align: center;
+        padding-left: 0rem;
+    }
 }
