--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,201 @@
 /* Add CSS styling here */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	/* border: 1px solid black; */
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+/* general styles */
+
+*{
+    box-sizing:border-box;
+    max-width: 100%;
+}
+
+
+html{
+    font-style:62.5%;
+    
+}
+body{
+    font-size:1.6rem;
+    font-family:'Roboto Mono';
+    line-height: 1.5;
+    
+}
+
+header{
+    width:100%;
+}
+nav {
+    display:flex;
+    width:100%;
+}
+.links {
+    display: flex;
+    width: 50%;
+    justify-content: flex-end;
+    justify-content: space-evenly;
+   
+}
+a{
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    font-family: 'Chelsea Market';
+    text-decoration: none;
+}
+.name{
+    display:flex;
+    justify-content:flex-start;
+    width:50%;
+    margin-left:5%;
+}
+h2{
+    font-family:"chelsea Market";
+    font-size: 2.5rem;
+}
+
+.main{
+    margin:0 auto;
+    margin-top: 4%;
+    display:flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    width:70%;
+    height: 60vh;
+    align-items: center;
+    justify-content:center;
+    background-image: url('https://picsum.photos/600/800');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position: center; 
+
+}
+
+
+h1{
+    width:50%;
+    font-family:"chelsea Market";
+    font-size: 4.2rem;
+    text-shadow:4px 4px white;
+    margin-bottom: 5%;
+}
+
+#projects{
+    transition: .3s;
+    font-size: 1.4rem;
+    color: yellow;
+    text-shadow: 3px 2px black;
+    background-color: aqua;
+    border-radius:10px; 
+    font-family:"chelsea Market";
+    align-items: center;
+    width: 14%;
+    height:12%;
+   
+}
+#projects a{
+    font-size:1.4rem;
+    color: yellow;
+    
+}
+#projects:hover{
+    transform:rotate(20deg);
+} 
+
+.gallery{
+    display: flex;
+    flex-direction:;
+    width:98%;
+    flex-wrap:wrap;
+    text-align: center;
+}
+p{
+    font-size: 2rem;
+    font-family: 'Chelsea Market';
+    text-shadow: 2px 2px grey;
+}
+.gallery div{
+    margin-top: 4%;
+    width:33%;
+}
+.img-cont1{
+width:30%;
+}
+.img-cont2{
+width:30%; 
+}
+.img-cont3{
+width:30%;
+}
+.img-cont4{
+width:30%;
+}
+.img-cont5{
+width:30%;
+}
+.img-cont6{
+width:3;
+}
+footer{
+    width: 100%;
+    margin-top:4%;
+    background-color: aqua;
+    height:10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer button {
+    font-size: 1.6rem;
+    font-family: 'Chelsea Market';
+    border-radius: 10px;
+    height: 44%;
+    width:14%;
+    background-color: yellow;
+}
